--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         </button>
       </div>
     </main>
+    <footer class="footer">
+      <cite>&copy; WENIV CORP.</cite>
+    </footer>
     <script></script>
   </body>
 </html>
